force-app/main/default/default/objects/GGW_Content_Block__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Main formatted rich text holds a block of content</description>
    <inlineHelpText>Main formatted rich text holds a block of content</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>