force-app/main/default/default/objects/GGW_Content_Block__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related parent Section record</description>
    <inlineHelpText>Related parent Section record</inlineHelpText>
    <label>Section</label>
    <referenceTo>GGW_Section__c</referenceTo>
    <relationshipLabel>Content Blocks</relationshipLabel>
    <relationshipName>Content_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>