force-app/main/default/default/objects/GGW_Content_Block__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short text for search or tags identify content block</description>
    <inlineHelpText>Short text for search or tags identify content block</inlineHelpText>
    <label>Short Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>